--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">About</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">RythmCode is a trusted brand all over with a great reputation</h3>
                 </div>
                 <ul class="timeline">
                     <li>
