--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </nav>
         <!-- Masthead-->
         <header class="masthead">
-            <div class="container">
+            <div class="container" >
                 <div class="masthead-subheading">Welcome To Our dear customer!</div>
                 <div class="masthead-heading text-uppercase">It's Nice To Meet You, how may we be of help</div>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#services">Tell Me More</a>
@@ -188,7 +188,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">About</h2>
-                    <h3 class="section-subheading text-muted">RythmCode is a trusted brand all over with a great reputation</h3>
+                    <h3 class="section-subheading text-muted">RythmCode is a trusted brand all over with a great re</h3>
                 </div>
                 <ul class="timeline">
                     <li>
