--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container" >
-                <div class="masthead-subheading">Welcome To Our dear customer!</div>
+                <div class="masthead-subheading">Welcome our esteemed client!</div>
                 <div class="masthead-heading text-uppercase">It's Nice To Meet You, how may we be of help</div>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#services">Tell Me More</a>
             </div>
@@ -198,7 +198,10 @@
                                 <h4>2009-2011</h4>
                                 <h4 class="subheading">Our Humble Beginnings</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">It all started out as an idea to bring talented developers together,
+                                to have an incredible team that would deliver top notch services as we do today. We started out as a very small team ot about two individuals, 
+                                it is unbilivable how we have gained the trust of ou clients and gained credibility
+                            </p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -208,17 +211,23 @@
                                 <h4>March 2011</h4>
                                 <h4 class="subheading">An Agency is Born</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">
+                                We do our tasks with absolute honor keeping in mind that winning your trust and fulfilling your desires is our top priority. This 
+                                agency was brought to life due to the fact that it can be trusted and over time we have been gaining the trust of our clients and being reffered 
+                                to other clients over and over again
+                            </p></div>
                         </div>
                     </li>
                     <li>
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>December 2015</h4>
+                                <h4>January 2024</h4>
                                 <h4 class="subheading">Transition to Full Service</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">
+                             We are now working full time and hope to continue gain more traction as time goes by thanks to you 
+                            </p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -228,7 +237,11 @@
                                 <h4>July 2020</h4>
                                 <h4 class="subheading">Phase Two Expansion</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">
+                                We are hoping to expand and outreach more organizations, customers and individuals throughout the world as we are planning to 
+                              include more services and try new things. You can make it possible if put out a good word for us. we do believe that we offer the best 
+                              services and we are sure that our work will speak for itself, how about you ty us by giving a task 👨🏾‍💻💯
+                            </p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
